# monogl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/monogl/: monogl_canvas.h  monogl_image.h  monogl_surface.h  monogl_surface_info.h  monogl_types.h
src/: monogl_canvas.c  monogl_image.c  monogl_surface.c  monogl_surface_info.c
tests/: CMakeLists.txt  check_monogl_image.c  test_monogl.c  test_monogl_canvas.c  test_monogl_image.c  test_monogl_surface.c
